<resources>
    <string name="app_name">闲书图书柜</string>
    <!-- (主界面)底部导航菜单text -->
    <string name="menu_bottom_navigation_library">书库</string>
    <string name="menu_bottom_navigation_donate">捐书</string>
    <string name="menu_bottom_navigation_borrow">借书</string>
    <!--<string name="menu_bottom_navigation_mycollect">借书</string>-->
    <string name="menu_bottom_navigation_return">还书</string>

    <!-- 登录界面text -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="password">密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="remember_password">记住密码</string>
    <string name="text_login_mobile">验证码登录</string>
    <string name="text_no_account">没有账号？</string>

    <!-- 注册界面 -->
    <string name="text_sign_up_info">注册信息</string>
    <string name="text_sign_up">注册</string>
    <string name="text_mobile_number">手机号码</string>
    <string name="text_image_verification_code">图片验证码</string>
    <string name="text_message_verification_code">短信验证码</string>
    <string name="text_get_message_verification_code">获取验证码</string>
    <string name="text_set_password">设置密码</string>
    <string name="action_sign_up">注册</string>
    <string name="text_sign_up_commit">提交</string>

    <!-- 用户界面text -->
    <string name="text_edit_info">编辑资料</string>
    <string name="text_user_abstract">摘要信息</string>

    <!-- 编辑资料(用户)界面text -->
    <string name="text_choose">请点击选择</string>
    <string name="text_cancel">取消</string>
    <string name="text_done">完成</string>
    <string name="text_change_avatar">设置头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_user_name">用户名</string>
    <string name="text_parent_name">家长姓名</string>
    <string name="text_sex">性别</string>
    <string name="text_school">学校</string>
    <string name="text_no">学号</string>
    <string name="text_stu_name">学生姓名</string>
    <string name="text_grade">年级</string>
    <string name="text_classes">所在班级</string>
    <string name="text_book_card">借书卡</string>

    <!-- 设置界面text -->
    <string name="text_setting">设置</string>
    <string name="text_account_and_security">账号与安全</string>
    <string name="text_about">关于</string>
    <!-- 其他text -->
    <string name="text_not_logged_in">未登录</string>
    <string name="take_a_picture">拍照</string>
    <string name="select_from_the_album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="text_mobile">手机号</string>
    <string name="text_deposit">押金</string>
    <string name="text_email">邮箱</string>
    <string name="text_edit_mobile">修改手机号</string>
    <string name="text_password_setting">密码设置</string>
    <string name="text_set_login_password">设置登录密码</string>
    <string name="text_set_login_mobile">设置手机号</string>
    <string name="text_security_check">安全验证</string>
    <string name="text_next">下一步</string>
    <string name="text_confirm">确认</string>
    <string name="text_input_password">请输入6-16位密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="input_msg_code">请输入验证码</string>
    <string name="text_input_mobile">填写手机号</string>

</resources>
