<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_menu_library"
        android:title="@string/menu_bottom_navigation_library" />

    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_menu_donate"
        android:title="@string/menu_bottom_navigation_donate" />

    <item
        android:id="@+id/navigation_borrow"
        android:icon="@drawable/ic_menu_borrow"
        android:title="@string/menu_bottom_navigation_borrow" />
    <item
        android:id="@+id/navigation_mycollect"
        android:icon="@drawable/ic_menu_borrow"
        android:title="@string/menu_bottom_navigation_mycollect" />

    <item
        android:id="@+id/navigation_giveback"
        android:icon="@drawable/ic_menu_giveback"
        android:title="@string/menu_bottom_navigation_return" />

</menu>
