<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_take_picture"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/take_a_picture" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDarkGray" />

    <TextView
        android:id="@+id/tv_from_album"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/select_from_the_album" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorDarkGray" />

    <TextView
        android:id="@+id/tv_pop_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cancel" />


</LinearLayout>