<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.EditUserinfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_edit_info"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/text_done"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/tv_change_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/text_change_avatar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_user_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:enabled="false"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_sex"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_sex"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/text_choose" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_no"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stu_name"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_stu_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_stu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_classes"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_classes"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_deposit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_deposit"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:enabled="false"
            android:inputType=""
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:src="@drawable/default_avatar"
            android:text="@string/text_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>