<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.MsgSignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin">

        <ImageButton
            android:id="@+id/ib_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_login_mobile"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_selector"
        android:gravity="center_vertical"
        android:hint="@string/text_mobile_number"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingStart="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/et_selector"
            android:gravity="center_vertical"
            android:hint="@string/text_message_verification_code"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/tv_message_code"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/general_border_line"
            android:gravity="center"
            android:text="@string/text_get_message_verification_code"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:clickable="false"
        android:id="@+id/btn_sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_selector"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />


</LinearLayout>